--- a/css/styles.css
+++ b/css/styles.css
@@ -169,6 +169,7 @@ header {
   line-height: 1.11;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mobile-nav-link.current {
@@ -189,6 +190,7 @@ header {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-link.contact-link-tel {
@@ -197,6 +199,7 @@ header {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #4d5ae5;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* endregion Modal-header */
@@ -684,11 +687,11 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   width: 264px;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #f4f4fd;
+  color: #fff;
   text-align: left;
   margin-bottom: 72px;
   margin-left: 16px;
@@ -1080,6 +1083,14 @@ footer .social-link:focus {
   outline: transparent;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.textarea-comment::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
 }
 
 .textarea-comment:focus {
