--- a/css/styles.css
+++ b/css/styles.css
@@ -1153,6 +1153,7 @@ footer .social-link:focus {
   cursor: pointer;
   background-color: #4D5AE5;
   border: none;
+  border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin: 0 auto;
   margin-bottom: 24px;
