--- a/css/styles.css
+++ b/css/styles.css
@@ -528,6 +528,7 @@ button {
   letter-spacing: 0.02em;
   color: #2e2f42;
   text-align: center;
+  margin-bottom: 8px;
 }
 
 
@@ -1218,8 +1219,6 @@ footer .social-link:focus {
   .container {
     max-width: 768px;
     width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
     margin: 0 auto;
   }
 
@@ -1229,6 +1228,8 @@ footer .social-link:focus {
     flex-wrap: wrap;
     gap: 24px;
     align-items: center;
+    padding-left: 108px;
+    padding-right: 108px;
   }
 
   .mobile-menu {
@@ -1369,15 +1370,16 @@ footer .social-link:focus {
   /* #endregion section-strategy */
 
 
-
-
   /* #region section-fotos */
 
 
   .section-fotos .list-foto {
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 64px 24px;
+    justify-content: center;
+    margin: 0 auto;
+    max-width: 552px;
   }
 
 
@@ -1415,8 +1417,6 @@ footer .social-link:focus {
     flex-direction: column;
     align-items: flex-start;
     margin-top: 96px;
-    margin-left: 108px;
-    margin-right: 24px;
     gap: 16px;
   }
 
@@ -1451,7 +1451,6 @@ footer .social-link:focus {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-left: 108px;
     margin-bottom: 96px;
   }
 
@@ -1730,6 +1729,9 @@ footer .social-link:focus {
 
   .section-fotos .list-foto {
     flex-wrap: nowrap;
+    justify-content: center;
+    margin: 0;
+    max-width: 1128px;
   }
 
   .foto-li {
