--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ IMG {
 
 .container {
   max-width: 320px;
-  padding: 0 15px;
+  padding: 0 16px;
   margin: 0 auto;
 }
 
@@ -317,6 +317,10 @@ button {
   background-color: #fff;
   padding-bottom: 96px;
   padding-top: 96px;
+}
+
+.section-strategy .feature-block-item { 
+  width: 100%; 
 }
 
 .visually-hidden {
@@ -1151,7 +1155,11 @@ footer .social-link:focus {
   border: none;
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin: 0 auto;
+  margin: 16px auto 0;
+}
+
+.btn-submit svg {
+  fill: currentColor;
 }
 
 .btn-submit:hover {
@@ -1191,7 +1199,7 @@ footer .social-link:focus {
   border: 1px solid transparent;
   border-radius: 4px;
   transition: border-color 0.2s ease;
-  margin-bottom: 24px;
+  /* margin-bottom: 24px; */
 }
 
 .checkbox-wrapper:hover {
@@ -1539,7 +1547,7 @@ footer .social-link:focus {
 
   .container {
     max-width: 1158px;
-    padding: 0 15px;
+    padding: 0 16px;
     margin: 0 auto;
   }
 
