--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ header {
 .header-container {
   display: flex;
   align-items: center;
+  height: 56px;
 }
 
 .menu-nav-list,
@@ -121,7 +122,7 @@ header {
 .mobile-menu .container {
   max-width: 100%;
   margin: 0;
-  padding: 0 16px;
+  padding: 72px 16px 0 16px;
 }
 
 .mobile-menu-container {
@@ -247,12 +248,12 @@ header {
 
 .mobile-menu-container address {
   margin-top: 168px;
-  margin-bottom: 48px;
+  /* margin-bottom: 48px; */
 }
 
 .mobile-menu .contact-link {
   display: block;
-  margin-bottom: 24px;
+  margin-bottom: 48px;
 }
 
 /* #endregion mobile-menu */
@@ -707,6 +708,7 @@ button {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  margin-bottom: 72px;
 }
 
 .footer-social-block .footer-text {
@@ -718,8 +720,8 @@ button {
   display: flex;
   justify-content: center;
   gap: 16px;
-  margin-top: 16px;
-  margin-bottom: 72px;
+  /* margin-top: 16px;
+  margin-bottom: 72px; */
 }
 
 .icon-nav-footer {
@@ -798,8 +800,8 @@ footer .social-link:focus {
 }
 
 .subscribe-title {
-  margin-bottom: 16px;
-  margin-top: 72px;
+  /* margin-bottom: 16px;
+  margin-top: 72px; */
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -1411,6 +1413,7 @@ footer .social-link:focus {
 
 
   /* #endregion portfolio */
+ 
   /* #region footer */
 
 
@@ -1419,7 +1422,6 @@ footer .social-link:focus {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    /* margin-top: 96px; */
     gap: 16px;
   }
 
@@ -1435,7 +1437,6 @@ footer .social-link:focus {
     width: 208px;
     height: 80px;
     gap: 0;
-    /* margin-top: 96px; */
   }
 
   .footer-social-block .footer-text {
@@ -1455,7 +1456,6 @@ footer .social-link:focus {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    /* margin-bottom: 96px; */
   }
 
   .burger-btn {
@@ -1790,7 +1790,8 @@ footer .social-link:focus {
   .footer-logo-cont {
     background-color: #2e2f42;
     width: 100%;
-    margin-top: 120px;
+    padding: 100px 0;
+    /* margin-top: 120px; */
   }
 
   .footer-logo-cont .container {
@@ -1800,7 +1801,7 @@ footer .social-link:focus {
     justify-content: center;
     align-items: flex-start;
     width: 100%;
-    margin-top: 100px;
+    /* margin-top: 100px; */
     gap: 0;
     padding: 0;
   }
