--- a/css/styles.css
+++ b/css/styles.css
@@ -247,13 +247,12 @@ header {
 }
 
 .mobile-menu-container address {
-  margin-top: 168px;
-  /* margin-bottom: 48px; */
+  margin-bottom: 48px;
 }
 
 .mobile-menu .contact-link {
   display: block;
-  margin-bottom: 48px;
+  margin-bottom: 24px;
 }
 
 /* #endregion mobile-menu */
@@ -550,7 +549,7 @@ button {
 .portfolio-section {
   background-color: #fff;
   padding-top: 96px;
-  padding-bottom: 96px;
+  /* padding-bottom: 96px; */
 }
 
 .portfolio-title {
@@ -568,7 +567,7 @@ button {
   display: flex;
   flex-direction: column;
   gap: 48px;
-  margin: 0 auto 96px;
+  margin: 0 auto;
 }
 
 .portfolio-item {
@@ -708,7 +707,7 @@ button {
   display: flex;
   flex-direction: column;
   gap: 16px;
-  margin-bottom: 72px;
+  margin-bottom: 40px;
 }
 
 .footer-social-block .footer-text {
@@ -843,6 +842,7 @@ footer .social-link:focus {
   letter-spacing: 0.04em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   color: #fff;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .label-footer input {
@@ -1093,7 +1093,7 @@ footer .social-link:focus {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: #8e8f99;
+  color: rgba(46, 47, 66, 0.4);
 }
 
 .textarea-comment:focus {
@@ -1226,6 +1226,10 @@ footer .social-link:focus {
     margin: 0 auto;
     padding: 0 16px;
   }
+
+.header-container {
+  height: 72px;
+}
 
   .footer-logo-cont .container {
     display: flex;
@@ -1687,7 +1691,7 @@ footer .social-link:focus {
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 8px;
-    margin-top: 8px;
+    /* margin-top: 8px; */
   }
 
 
@@ -1760,7 +1764,7 @@ footer .social-link:focus {
   .portfolio-section {
     max-width: 1128px;
     padding-top: 120px;
-    padding-bottom: 120px;
+    /* padding-bottom: 120px; */
     display: flex;
     align-items: center;
     justify-content: center;
