--- a/css/styles.css
+++ b/css/styles.css
@@ -677,6 +677,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 72px;
 }
 
 .footer-logo {
@@ -700,14 +701,14 @@ button {
   font-size: 16px;
   color: #f4f4fd;
   text-align: left;
-  margin-bottom: 72px;
+  /* margin-bottom: 72px; */
 }
 
 .footer-social-block {
   display: flex;
   flex-direction: column;
   gap: 16px;
-  margin-bottom: 40px;
+  margin-bottom: 72px;
 }
 
 .footer-social-block .footer-text {
@@ -828,7 +829,7 @@ footer .social-link:focus {
   align-items: center;
   width: 100%;
   margin-top: 16px;
-  margin-bottom: 16px;
+  /* margin-bottom: 16px; */
 }
 
 .email-input {
@@ -1068,7 +1069,7 @@ footer .social-link:focus {
 }
 
 .textarea-container {
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 
 
@@ -1158,7 +1159,7 @@ footer .social-link:focus {
   border: none;
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin: 16px auto 0;
+  margin: 0 auto;
 }
 
 .btn-submit svg {
@@ -1202,7 +1203,7 @@ footer .social-link:focus {
   border: 1px solid transparent;
   border-radius: 4px;
   transition: border-color 0.2s ease;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
 }
 
 .checkbox-wrapper:hover {
@@ -1764,7 +1765,7 @@ footer .social-link:focus {
   .portfolio-section {
     max-width: 1128px;
     padding-top: 120px;
-    /* padding-bottom: 120px; */
+    padding-bottom: 120px;
     display: flex;
     align-items: center;
     justify-content: center;
