modified:   css/styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -549,7 +549,7 @@ button {
 .portfolio-section {
   background-color: #fff;
   padding-top: 96px;
-  /* padding-bottom: 96px; */
+  padding-bottom: 96px;
 }
 
 .portfolio-title {
